@@ -1,4 +1,3 @@
-
 package org.odk.collect.android.views;
 
 import android.content.Context;
@@ -39,23 +38,21 @@ import java.util.HashMap;
 /**
  * @author carlhartung
  */
-public class ODKView extends ScrollView implements OnLongClickListener, WidgetChangedListener {
+public class ODKView extends ScrollView
+        implements OnLongClickListener, WidgetChangedListener {
 
     // starter random number for view IDs
     private final static int VIEW_ID = 12345;  
     
-    private final static String t = "CLASSNAME";
-    private final static int TEXTSIZE = 21;
-    
-    private Context mContext;
+    private static final String TAG = ODKView.class.getSimpleName();
 
-    private LinearLayout mView;
-    private LinearLayout.LayoutParams mLayout;
-    private ArrayList<QuestionWidget> widgets;
-    private ArrayList<View> dividers;
+    private final LinearLayout mView;
+    private final LinearLayout.LayoutParams mLayout;
+    private final ArrayList<QuestionWidget> widgets;
+    private final ArrayList<View> dividers;
     private ProgressBar mProgressBar;
     
-    private int mQuestionFontsize;
+    private final int mQuestionFontsize;
 
     public final static String FIELD_LIST = "field-list";
     
@@ -67,31 +64,16 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
 
     private boolean mProgressEnabled;
     
-    SpannableStringBuilder mGroupLabel;
+    private final SpannableStringBuilder mGroupLabel;
 
     /**
      * If enabled, we use dividers between question prompts
      */
     private static final boolean SEPERATORS_ENABLED = false;
 
-    public ODKView(Context context, FormEntryPrompt questionPrompt, FormEntryCaption[] groups, WidgetFactory factory) {
-        this(context, new FormEntryPrompt[] {
-            questionPrompt
-        }, groups, factory);
-    }
-    
-    public ODKView(Context context, FormEntryPrompt questionPrompt, FormEntryCaption[] groups, WidgetFactory factory, WidgetChangedListener wcl) {
-        this(context, new FormEntryPrompt[] {
-            questionPrompt
-        }, groups, factory, wcl, false);
-    }
-    
-    public ODKView(Context context, FormEntryPrompt[] questionPrompts, FormEntryCaption[] groups, WidgetFactory factory) {
-        this(context, questionPrompts, groups, factory, null, false);
-    }
-
-
-    public ODKView(Context context, FormEntryPrompt[] questionPrompts, FormEntryCaption[] groups, WidgetFactory factory, WidgetChangedListener wcl, boolean isGroup) {
+    public ODKView(Context context, FormEntryPrompt[] questionPrompts,
+                   FormEntryCaption[] groups, WidgetFactory factory,
+                   WidgetChangedListener wcl) {
         super(context);
         
         if(wcl !=null){
@@ -105,10 +87,8 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         String question_font =
                 settings.getString(PreferencesActivity.KEY_FONT_SIZE, Collect.DEFAULT_FONTSIZE);
 
-        mQuestionFontsize = new Integer(question_font).intValue();
+        mQuestionFontsize = Integer.valueOf(question_font);
         
-        mContext = context;
-
         widgets = new ArrayList<QuestionWidget>();
         dividers = new ArrayList<View>();
 
@@ -116,7 +96,7 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
 
         mView = (LinearLayout) layout.findViewById(R.id.odkview_layout);
         
-        if(PreferencesActivity.getProgressBarMode(mContext) == ProgressBarMode.ProgressOnly) {
+        if(PreferencesActivity.getProgressBarMode(context) == ProgressBarMode.ProgressOnly) {
             this.mProgressEnabled = true;
         }
 
@@ -134,14 +114,13 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
             LinearLayout barView = new LinearLayout(getContext());
             barView.setOrientation(LinearLayout.VERTICAL);
             barView.setGravity(Gravity.BOTTOM);
-            barView.addView((View) mProgressBar);
+            barView.addView(mProgressBar);
             mView.addView(barView, barLayout);
         }
 
         mLayout =
             new LinearLayout.LayoutParams(LinearLayout.LayoutParams.FILL_PARENT,
                     LinearLayout.LayoutParams.WRAP_CONTENT);
-        //mLayout.setMargins(10, 0, 10, 0);
 
         //Figure out if we share hint text between questions
         String hintText = null;
@@ -195,7 +174,7 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
             }
 
             widgets.add(qw);
-            mView.addView((View) qw, mLayout);
+            mView.addView(qw, mLayout);
             
             qw.setChangedListener(this);
         }
@@ -205,7 +184,7 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         addView(layout);
     }
     
-    public void removeQuestionFromIndex(int i){
+    void removeQuestionFromIndex(int i){
         int dividerIndex = Math.max(i - 1, 0);
 
         if (dividerIndex < dividers.size()) {
@@ -214,7 +193,7 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         }
 
         if (i < widgets.size()) {
-            mView.removeView((View) widgets.get(i));
+            mView.removeView(widgets.get(i));
             widgets.remove(i);
         }
     }
@@ -226,12 +205,11 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         Collections.reverse(indexes);
         
         for(int i=0; i< indexes.size(); i++){
-            removeQuestionFromIndex(indexes.get(i).intValue());
+            removeQuestionFromIndex(indexes.get(i));
         }
     }
     
     public void addQuestionToIndex(FormEntryPrompt fep, WidgetFactory factory, int i){
-
         View divider = new View(getContext());
         if(SEPERATORS_ENABLED) {
             divider.setBackgroundResource(android.R.drawable.divider_horizontal_bright);
@@ -257,7 +235,7 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
 //        }
 
         widgets.add(i, qw);
-        mView.addView((View) qw, getViewIndex(2 * i + mViewBannerCount), mLayout);
+        mView.addView(qw, getViewIndex(2 * i + mViewBannerCount), mLayout);
         
         qw.setChangedListener(this);
     }
@@ -278,9 +256,6 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         return answers;
     }
     
-    /* (non-Javadoc)
-     * @see android.widget.LinearLayout#onMeasure(int, int)
-     */
     @Override
     protected void onMeasure(int widthMeasureSpec, int heightMeasureSpec) {
         int newHeight = MeasureSpec.getSize(heightMeasureSpec);
@@ -294,16 +269,6 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         }
         
         super.onMeasure(widthMeasureSpec, heightMeasureSpec);
-                
-//        double change = ((this.getMeasuredHeight() * 1.0 - gmh) / this.getMeasuredHeight()); 
-//        System.out.println("Old: " + gmh + ". New: "+ this.getMeasuredHeight() + ". CurrentHeight: " + height);
-//        
-//        if(gmh == -1 || gmh == 0 || change > .2) {
-//            //If the view size change has changed by more than 20% 
-//            if(mHelpText != null) {
-//                mHelpText.updateMaxHeight((this.getMeasuredHeight() - this.getScrollY())/ 3);
-//            }
-//        }
     }
     
     private void updateConstraintRelevancies(){
@@ -364,8 +329,6 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
     /**
      * Ugh, the coupling here sucks, but this returns the group label
      * to be used for this odk view. 
-     * 
-     * @return
      */
     public SpannableStringBuilder getGroupLabel() {
         return mGroupLabel;
@@ -374,7 +337,6 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
     private void addHintText(String hintText) {
         if (hintText != null && !hintText.equals("")) {
             TextView mHelpText = new TextView(getContext());
-            mHelpText = new TextView(getContext());
             mHelpText.setTextSize(TypedValue.COMPLEX_UNIT_DIP, mQuestionFontsize - 3);
             mHelpText.setPadding(0, -5, 0, 7);
             // wrap to the widget of view
@@ -386,9 +348,6 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
             mView.addView(mHelpText, mLayout);
         }
     }
-    
-    
-
 
     public void setFocus(Context context) {
         if (widgets.size() > 0) {
@@ -396,14 +355,10 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         }
     }
 
-
     /**
      * Called when another activity returns information to answer this question.
-     * 
-     * @param answer
      */
     public void setBinaryData(Object answer) {
-        
         boolean set = false;
         for (QuestionWidget q : widgets) {
             if (q instanceof IBinaryWidget) {
@@ -416,17 +371,14 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         }
 
         if (!set) {
-            Log.w(t, "Attempting to return data to a widget or set of widgets not looking for data");
+            Log.w(TAG, "Attempting to return data to a widget or set of widgets not looking for data");
                      
             for (QuestionWidget q : widgets) {
                 if (q instanceof IBinaryWidget) {
                     ((IBinaryWidget) q).setBinaryData(answer);
-                    set = true;
                     break;
                 }
             }
-            
-            
         }
     }
 
@@ -445,16 +397,10 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         }
     }
 
-
     public ArrayList<QuestionWidget> getWidgets() {
         return widgets;
     }
 
-
-    /*
-     * (non-Javadoc)
-     * @see android.view.View#setOnFocusChangeListener(android.view.View.OnFocusChangeListener)
-     */
     @Override
     public void setOnFocusChangeListener(OnFocusChangeListener l) {
         for (int i = 0; i < widgets.size(); i++) {
@@ -463,21 +409,11 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         }
     }
 
-
-    /*
-     * (non-Javadoc)
-     * @see android.view.View.OnLongClickListener#onLongClick(android.view.View)
-     */
     @Override
     public boolean onLongClick(View v) {
         return false;
     }
     
-
-    /*
-     * (non-Javadoc)
-     * @see android.view.View#cancelLongPress()
-     */
     @Override
     public void cancelLongPress() {
         super.cancelLongPress();
@@ -486,21 +422,13 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         }
     }
 
-    /*
-     * (non-Javadoc)
-     * @see org.odk.collect.android.listeners.WidgetChangedListener#widgetEntryChanged()
-     */
     @Override
     public void widgetEntryChanged() {
-        
         updateConstraintRelevancies();
-        
         updateLastQuestion();
-        
     }
     
-    public void updateLastQuestion(){
-
+    void updateLastQuestion(){
         StringWidget last = null;
         
         for(QuestionWidget q: widgets){
@@ -543,5 +471,4 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         }
         return questionIndex;
     }
-    
 }
